# ovgu-magdeburg

./: .gitignore  README.md
cpp/: .gitignore
cpp/ex1/: CMakeLists.txt  text_adventure.cpp
cpp/ex10/: CMakeLists.txt
cpp/ex10/include/: hybridarray.hpp
cpp/ex10/src/: program.cpp
cpp/ex2/: CMakeLists.txt
cpp/ex2/include/: timer.h
cpp/ex2/src/: main.cpp  timer.cpp
cpp/ex3/: CMakeLists.txt
cpp/ex3/include/: arraylist.h
cpp/ex3/src/: arraylist.cpp  main.cpp
cpp/ex4/: CMakeLists.txt
cpp/ex4/include/: random_char.h  test_object.h
cpp/ex4/src/: program.cpp  random_char.cpp  test_object.cpp
cpp/ex5/: CMakeLists.txt
cpp/ex5/include/: dynamicobjectlist.hpp  object.h
cpp/ex5/src/: dynamicobjectlist.cpp  object.cpp  program.cpp
cpp/ex6/: CMakeLists.txt
cpp/ex6/include/: node.hpp  operators.hpp  valuenode.hpp
cpp/ex6/src/: node.cpp  operators.cpp  program.cpp  valuenode.cpp
cpp/ex7/: CMakeLists.txt
cpp/ex7/include/: myvector.h  myvector.inl
cpp/ex7/src/: main.cpp
cpp/ex8/: CMakeLists.txt
cpp/ex8/ext/gtest/: CMakeLists.txt
cpp/ex8/src/: program.cpp
cpp/ex9/: CMakeLists.txt  README.txt
cpp/ex9/include/: consolepolicy.hpp  filepolicy.hpp  logger.hpp  policy.hpp
cpp/ex9/src/: consolepolicy.cpp  filepolicy.cpp  logger.cpp  program.cpp
cpp/exam2013/: CMakeLists.txt
cpp/exam2013/include/: ex1.h  ex2.h  ex5.h  ex6.h  ex7.h  ex8.h
cpp/exam2013/src/: main.cpp  main_ex1.cpp  main_ex2.cpp  main_ex3.cpp  main_ex4.cpp  main_ex5.cpp  main_ex6.cpp  main_ex7.cpp  main_ex8.cpp
erlang/ex1/: ackermann.erl  fib.erl  oddnum.erl  remdup.erl  rev.erl  reverse_list.erl  scalar.erl
erlang/ex2/: fibgen.erl  iban.erl  map.erl  pyTriple.erl  zipWith.erl
erlang/ex3/: alternate.erl  curry.erl  cycle.erl  flip.erl  iterate.erl
erlang/ex4/: counter.erl  delegation.erl  filter.erl  hamming.erl  sieve.erl  sync.erl  sync2.erl
erlang/ex5/: bank.erl  branch.erl  chat.erl  database.erl  mergesort.erl  ring.erl
erlang/ex6/: primes.erl  printing.erl
erlang/playground/: convert.erl  count.erl  drop.erl  fact.erl  listops.erl  mathdemo.erl  pascal.erl
gpu/: .gitignore
gpu/gpu_ex_01_src/Material/: Material.vcxproj  material.cpp
gpu/gpu_ex_01_src/Texture/: Texture.cpp  Texture.vcxproj  bmp.cpp
gpu/gpu_ex_01_src/Transformations/: Transformations.vcxproj  Transformations.vcxproj.filters  transformations.cpp
gpu/gpu_ex_02_src/Blending/: blending.cpp
gpu/gpu_ex_02_src/Mirror/: mirror.cpp
gpu/gpu_ex_02_src/VBO_fractal/: VBO_Fractal.cpp
gpu/gpu_ex_03_src/GlowingTeapot/: GlowingTeapot.cpp  GlowingTeapot.vcxproj  GlowingTeapot.vcxproj.filters  blur.frag  blur_hor.frag  blur_vert.frag
gpu/gpu_ex_03_src/PumpingTeapot/: PumpingTeapot.cpp  pumping.vert
gpu/gpu_ex_03_src/SSAA/: SSAA.cpp
gpu/gpu_ex_04_src/HairyBunny/: HairyBunny.cpp  HairyBunny.vcxproj  HairyBunny.vcxproj.filters  duplicate.geom  fluffy_hair.frag  fluffy_hair.geom  normal_hair.geom
gpu/gpu_ex_05_src/Streaklines/: Streaklines.cpp  advect.frag  advect.geom  advect.vert
gpu/gpu_ex_05_src/Tessellation/: Tesselation1.dom  Tessellation.cpp  Tessellation.dom  Tessellation.hull  Tessellation.vcxproj
gpu/gpu_ex_06_src/Histogram/: create_histogram.frag  create_histogram.vert  histogram.cpp
gpu/gpu_ex_06_src/Voxelization/: Voxelization.vcxproj  voxelization.cpp  voxelization.frag
gpu/gpu_ex_07_src/Exercise07/: Exercise07.sln
gpu/gpu_ex_07_src/Exercise07/SimpleVectorMad/: VectorMad.cu  (+1 more)
gpu/gpu_ex_08_src/Exercise08/: Exercise08.sln
gpu/gpu_ex_10_src/Exercise10/: Exercise10.sln
haskell/ex06/: takeWhileIO.hs
haskell/ex07/: historyIO.hs  maybeMonadProof.hs  numTreeMonad.hs  numTreeNotation.hs  reverseBind.hs
haskell/ex08/: countConcat.hs  joinStrings.hs  stateMonadProof1.hs  stats.hs
haskell/ex09/: listOfListsFunctor.hs  perms.hs  proofFunctionFunctor.hs  proofListFunctor.hs  proofTreeFunctor.hs
haskell/ex10/: cardGenerator.hs  esrever.hs  firstSemesterGenerator.hs  isPalindrome.hs  myEnumFromTo.hs  postCodeGenerator.hs
haskell/ex11/: Backpack.hs  ParseFunctions.hs  nTimes.hs  neList.hs  optional.hs  spotWhile.hs
haskell/ex6/: fmapIO.hs  repeatIO.hs  sequenceIO.hs
haskell/ex7/: numTreeNoMonad.hs
haskell/ex8/: countConcat.hs  mapconcat.hs  rememberConcat.hs
haskell/ex9/: transpose.hs
haskell/playground/: hangman.hs
(+10 files in other folders)
